syntax = "proto3";

option go_package="github.com/tjamir/flisol-2025/microblog/user-service/proto";
package user;



service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  string username = 2;
  bool valid = 3;
}